--- a/styles/style.css
+++ b/styles/style.css
@@ -8,12 +8,16 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
 }
 .container{
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 10px;
     
 }
 hr{
@@ -77,3 +81,61 @@ hr{
     font-size: 16px;
     color: #562EFF;
 }
+
+/* courses styles */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+
+/* media queries */
+/* for mobile devices */
+@media only screen and (max-width:688px)  {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+       
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+    
+    }
+
+    /* for tablet devices */
+    @media only screen and (min-width: 688px) and (max-width: 992px) {
+        .container{
+            width: 100%;
+        }
+        .players, .courses{
+            grid-template-columns: repeat(2, 1fr);
+        }
+        .blogs{
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
+
+   
